# moonsway

./: .gitignore  index.html  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: player-bar.tsx  search-bar.tsx  track-list.tsx
src/hooks/: useAuth.ts
src/lib/: auth.ts  cache.ts  format.ts  pb-setup.ts  pocketbase.ts
src/lib/api/: fetch.ts  instances.ts  music-api.ts  tidal.ts
src/pages/: album.tsx  artist.tsx  home.tsx  library.tsx  playlist.tsx  search.tsx
src/stores/: library-store.ts  player-store.ts
src/types/: music.ts
